<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/android_gradient_3"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dice_image1"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginEnd="40sp"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1" />


        <ImageView
            android:id="@+id/dice_image2"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dice_image3"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginEnd="40sp"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1" />

        <ImageView
            android:id="@+id/dice_image4"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="730dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/dice_image5"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/roll_5"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/roll_5" />

        <Button
            android:id="@+id/roll_4"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/roll_4" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/roll_3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/roll_3" />

        <Button
            android:id="@+id/roll_2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/roll_2" />


    </LinearLayout>


    <Button
        android:id="@+id/roll_1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll_1" />


    <Button
        android:id="@+id/clear_button"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/clear" />


</LinearLayout>